# cg

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  README.md  coverage.sh  coverage.txt  sonar-project.properties
maker/: ANALYSE.md  CMakeLists.txt  build.ps1  serve.ps1  wasm_api.cpp
maker/web/: app.js  index.html  maker.js  maker.wasm  style.css
qmlviewer/: CMakeLists.txt  design_system.md
qmlviewer/qml/: AnalysisDock.qml  AnalysisPanel.qml  AppIcon.qml  GlassPanel.qml  LegendCard.qml  Main.qml  Theme.qml
qmlviewer/src/: CgreQuickItem.cpp  CgreQuickItem.h  ControlServer.cpp  ControlServer.h  MeshModel.cpp  MeshModel.h  QtDeviceAdapter.cpp  QtDeviceAdapter.h  TcpLogServer.cpp  TcpLogServer.h  main.cpp
reconstruction-cli/: CMakeLists.txt  main.cpp
sinaia/: CMakeLists.txt  CurvaturePanel.cpp  CurvaturePanel.h  DecimationPanel.cpp  DecimationPanel.h  DrawingArea.cpp  DrawingArea.h  ImportSettings.h  Managers.cpp  Managers.h  PanelSettings.h  PropertyPanel.cpp  PropertyPanel.h  RemoteConsole.cpp  RemoteConsole.h  SettingsDialog.h  SettingsPanel.cpp  SettingsPanel.h  SinaiaApp.cpp  SinaiaApp.h  SinaiaFrame.cpp  SinaiaFrame.h  SupportedFormats.h  format_3dmf.xpm  format_3ds.xpm  format_obj.xpm  format_stl.xpm  icons.h  main.cpp  wxOpenGLCanvas.cpp  wxOpenGLCanvas.h  wxSizeReportCtrl.cpp  wxSizeReportCtrl.h
src/cgimg/: CMakeLists.txt  Makefile.dynamic  Makefile.static  cgimg.h  color.cpp  color.h  disparity.cpp  disparity.h  disparity_block.cpp  image.cpp  image.h  image_binarization.cpp  image_disparity_birchfield.cpp  image_disparity_birchfield.h  image_drawing.cpp  image_filter.cpp  image_geodesic.cpp  image_io.cpp  image_io.h  image_io_bmp.cpp  image_io_jpg.cpp  image_io_png.cpp  image_io_pnm.cpp  image_io_tga.cpp  image_quantization.cpp  image_quantization_heckbert.cpp  image_quantization_heckbert.h  image_quantization_wu.cpp  image_quantization_wu.h  image_tga.cpp  image_tga.h  palette.cpp  palette.h  perlin2.cpp  perlin2.h
src/cgmath/: CMakeLists.txt  Makefile.dynamic  Makefile.static  StorageOrder.h  TCamera.h  TMatrix2.h  TMatrix3.h  TMatrix4.h  TProjectionMatrix.h  TQuaternion.h  TSquareMatrix.h  TTransformation.h  TVector2.h  TVector3.h  TVector4.h  aabox.cpp  aabox.h  algebra_intersections.cpp  algebra_intersections.h  algebra_matrix2.cpp  algebra_matrix2.h  algebra_matrix3.cpp  algebra_matrix3.h  algebra_matrix4.cpp  algebra_matrix4.h  algebra_quaternion.cpp  algebra_quaternion.h  algebra_vector2.h  algebra_vector3.cpp  algebra_vector3.h  algebra_vector4.cpp  algebra_vector4.h  architecture_gothic.cpp  architecture_gothic.h  architecture_gothic_io.cpp  architecture_gothic_io.h  bernstein.cpp  bernstein.h  berstein.cpp  berstein.h  (+52 more)
src/cgmesh/: CMakeLists.txt  DiffParamEvaluator.cpp  DiffParamEvaluator.h  DiffParamEvaluator_desbrun.cpp  DiffParamEvaluator_goldfeather.cpp  DiffParamEvaluator_hamann.cpp  DiffParamEvaluator_hybrid.cpp  DiffParamEvaluator_steiner.cpp  DiffParamEvaluator_taubin.cpp  DirectVisibilityOfPointSets.cpp  DirectVisibilityOfPointSets.h  Makefile.dynamic  Makefile.static  NPR.h  NPRManager.cpp  NPRManager.h  NPRStructures.h  NPR_angle.cpp  NPR_angle.h  NPR_border.cpp  NPR_border.h  NPR_silhouette.cpp  NPR_silhouette.h  Nouveau document texte.txt  ambient_occlusion.cpp  ambient_occlusion.h  architecture_gothic.cpp  architecture_gothic.h  architecture_state_of_the_art_procedural_gothic.md  audio.cpp  audio.h  audio_convert.cpp  audio_convert.h  audio_io.cpp  audio_io.h  audio_rfft.cpp  audio_rfft.h  bintree.h  bounding_box.cpp  bounding_box.h  (+269 more)
src/cgnet/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  LineConsole.cpp  LineConsole.h  NetworkInfo.cpp  NetworkInfo.h  OverlappedSocket.cpp  OverlappedSocket.h  WsaError.cpp  WsaError.h
src/cgre/: CMakeLists.txt  TODO  WGL_ARB_extensions_string.cpp  WGL_ARB_extensions_string.h  WGL_ARB_pbuffer_extension.cpp  WGL_ARB_pbuffer_extension.h  WGL_ARB_pixel_format_extension.cpp  WGL_ARB_pixel_format_extension.h  WGL_ARB_render_texture_extension.cpp  WGL_ARB_render_texture_extension.h  background_manager.cpp  background_manager.h  camera.cpp  camera.h  capabilities_manager.cpp  capabilities_manager.h  cgre.h  console.cpp  console.h  display_list_manager.h  examinator.h  examinator_fly.cpp  examinator_fly.h  examinator_glulookat.cpp  examinator_glulookat.h  examinator_ground.cpp  examinator_ground.h  examinator_trackball.cpp  examinator_trackball.h  examinator_walk.cpp  examinator_walk.h  frame_buffer_object.cpp  frame_buffer_object.h  framerate.cpp  framerate.h  gamepad2.cpp  gamepad2.h  gl_wrapper.h  light_renderer.cpp  light_renderer.h  (+32 more)
src/cgre2/: Buffer.cpp  CMakeLists.txt  DescriptorLayout.cpp  DescriptorPool.cpp  DeviceContext.cpp  Logger.cpp  Pipeline.cpp  Shader.cpp  Swapchain.cpp  Texture.cpp  TextureManager.cpp  Trackball.cpp  UniformBuffer.cpp  Vertex.cpp  VulkanDevice.cpp  VulkanInstance.cpp
sulina/: CMakeLists.txt  design_system.md
sulina/cmake/: MakeDist.cmake
sulina/qml/: AnalysisDock.qml  (+5 more)
test/: CMakeLists.txt  tu_all.cpp  tu_cgimg_img.cpp  tu_cgimg_io.cpp  tu_cgmath.cpp  tu_cgmath_TQuaternion.cpp  tu_cgmath_TVector2.cpp  tu_cgmath_TVector3.cpp  tu_cgmath_TVector4.cpp  tu_cgmath_aabox.cpp  tu_cgmath_algebra_matrix2.cpp  tu_cgmath_algebra_matrix3.cpp  tu_cgmath_algebra_quaternion.cpp  tu_cgmath_arc.cpp  tu_cgmath_architecture_gothic.cpp  tu_cgmath_architecture_gothic_io.cpp  tu_cgmath_circle.cpp  tu_cgmath_curve_bezier.cpp  tu_cgmath_curve_discrete.cpp  tu_cgmath_curve_kappatau.cpp  tu_cgmath_curve_nurbs.cpp  tu_cgmath_ellipse.cpp  tu_cgmath_intersections.cpp  tu_cgmath_line.cpp  tu_cgmath_math.cpp  tu_cgmath_matrix4.cpp  tu_cgmath_minimization.cpp  tu_cgmath_nnls.cpp  tu_cgmath_plane.cpp  tu_cgmath_polyline.cpp  tu_cgmath_polynomial.cpp  tu_cgmath_polynomial_herbison_evans.cpp  tu_cgmath_polynomial_schwarze.cpp  tu_cgmath_quadric.cpp  tu_cgmath_random_generator.cpp  tu_cgmath_sphere.cpp  tu_cgmath_sqrt.cpp  tu_cgmath_tcamera.cpp  tu_cgmath_tmatrix2.cpp  tu_cgmath_tmatrix3.cpp  (+45 more)
vecna/: .clang-format  .gitignore  CMakeLists.txt  README.md  TESTING.md
(+164 files in other folders)
